--- a/emona cv.html
+++ b/emona cv.html
@@ -9,7 +9,7 @@
 <body>
     <h1 align="center">Emona Krasniqi</h1>
     <h4 align="center"> <address>Kalabri, Prishtine</address>+38349260061 · emonakrasniqi1@gmail.com</h4>
-    <h2>EXPERIENCEee</h2>
+    <h2>EXPERIENCE</h2>
     <h3>June 2021-Present</h3>
     <p>Childcare for international families, US EMBASSY</p>
     <h2>EDUCATION</h2>
