--- a/emona cv.html
+++ b/emona cv.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,32 @@
     <title>Emona Krasniqi CV</title>
 </head>
 <body>
-    <h1 align="center">Emona Krasniqi</h1>
-    <h4 align="center"> <address>Kalabri, Prishtine</address>+38349260061 · emonakrasniqi1@gmail.com</h4>
-    <h2>EXPERIENCE</h2>
-    <h3>June 2021-Present</h3>
-    <p>Childcare for international families, US EMBASSY</p>
+    <div>
+        <h1 align="center">Emona Krasniqi</h1>
+        <h4 align="center">
+            <address>Kalabri, Prishtine</address>+38349260061 · emonakrasniqi1@gmail.com
+        </h4>
+    </div>
+    <br>
+    <div><img src="./assets/depressed programmer girl.webp" alt="stock image of a programmer" width="200" title="stock image lol"></div>
+    <div>
+        <h2>EXPERIENCE</h2>
+        <h3>June 2021-Present</h3>
+        <p>Childcare for international families, <em>US EMBASSY</em></p>
+    </div>
+    <br>
+    <div>
     <h2>EDUCATION</h2>
     <h3>September 2014-June 2017</h3>
     <p>Xhevdet Doda High School</p>
     <h3>October 2017-Present</h3>
-    <p>Department of Chemistry, University of Prishtina</p>
+    <p><strong>Department of Chemistry</strong>, University of Prishtina</p>
     <h3>May 2022-Present</h3>
-    <p><a href="https://bootcamp.perprogramera.com/" target="_blank">Bootcamp online | PER PROGRAMERA</a></p>
-    <h2>SKILLS/LANGUAGES</h2>
+    <p><a href="https://bootcamp.perprogramera.com/" target="_blank"><span><strong>Bootcamp online | PER PROGRAMERA</strong></span></a></p>
+    </div>
+    <br>
+    <div>
+        <h2>SKILLS/LANGUAGES</h2>
     <ul>
         <li>Profficient in Microsoft Office</li>
         <li>Collaborative in a team setting</li>
@@ -28,16 +42,21 @@
         <li>Albanian-native language</li>
         <li>English-C2</li>
     </ul>
-    <h2>ACTIVITIES</h2>
+    </div>
+    <br>
+    <div>
+        <h2>ACTIVITIES</h2>
     <ul>
         <li>Arts and crafts, especially jewelry making</li>
         <li>Baking</li>
         <li>Hiking and cycling</li>
     </ul>
+    </div>
+    <br>
     <form>
-      Contact me  <input type="email" placeholder="via Email Adress">
-      <input type="phone number" placeholder="via Phone number">
-      <input type="submit">
+        Contact me <input type="email" placeholder="via Email Adress">
+        <input type="phone number" placeholder="via Phone number">
+        <input type="submit">
     </form>
 </body>
 </html>
