added extra description lists,fig caption, topofpage button

--- a/emona cv.html
+++ b/emona cv.html
@@ -8,32 +8,39 @@
     <title>Emona Krasniqi CV</title>
 </head>
 <body>
-    <div>
-        <h1 align="center">Emona Krasniqi</h1>
-        <h4 align="center">
+    <a id="topofpage"></a>
+    <div align="center">
+        <h1>Emona Krasniqi</h1>
+        <h4>
             <address>Kalabri, Prishtine</address>+38349260061 · emonakrasniqi1@gmail.com
         </h4>
     </div>
+    <div><figure align="center"><img src="./assets/depressed programmer girl.webp" alt="stock image of a programmer" width="240" title="stock image lol"> <figcaption>(example of a picture insertion)</figcaption></figure></div>
     <br>
-    <div><img src="./assets/depressed programmer girl.webp" alt="stock image of a programmer" width="200" title="stock image lol"></div>
     <div>
-        <h2>EXPERIENCE</h2>
-        <h3>June 2021-Present</h3>
-        <p>Childcare for international families, <em>US EMBASSY</em></p>
+        <h3>EXPERIENCE</h3>
+        <dl>
+            <dt><b>June 2021-present</b></dt>
+            <dd>Childcare for international families - <em>US EMBASSY</em></dd>
+        </dl>
     </div>
     <br>
     <div>
-    <h2>EDUCATION</h2>
-    <h3>September 2014-June 2017</h3>
-    <p>Xhevdet Doda High School</p>
-    <h3>October 2017-Present</h3>
-    <p><strong>Department of Chemistry</strong>, University of Prishtina</p>
-    <h3>May 2022-Present</h3>
-    <p><a href="https://bootcamp.perprogramera.com/" target="_blank"><span><strong>Bootcamp online | PER PROGRAMERA</strong></span></a></p>
+    <h3>EDUCATION</h3>
+    <dl>
+        <dt><b>September 2014-June 2017</b></dt>
+        <dd>Xhevdet Doda High School</dd>
+        <br>
+        <dt><b>October 2017-Present</b></dt>
+        <dd><em>Department of Chemistry,</em> University of Prishtina</dd>
+        <br>
+        <dt><b>May 2022-Present</b></dt>
+        <dd><a href="https://bootcamp.perprogramera.com/" target="_blank"><span><strong>Bootcamp online | PER PROGRAMERA</strong></span></a></dd>
+    </dl>
     </div>
     <br>
     <div>
-        <h2>SKILLS/LANGUAGES</h2>
+        <h3>SKILLS/LANGUAGES</h3>
     <ul>
         <li>Profficient in Microsoft Office</li>
         <li>Collaborative in a team setting</li>
@@ -45,18 +52,21 @@
     </div>
     <br>
     <div>
-        <h2>ACTIVITIES</h2>
+        <h3>ACTIVITIES</h3>
     <ul>
-        <li>Arts and crafts, especially jewelry making</li>
+        <li>Arts and crafts, especially jewelery making</li>
         <li>Baking</li>
         <li>Hiking and cycling</li>
     </ul>
     </div>
-    <br>
-    <form>
-        Contact me <input type="email" placeholder="via Email Adress">
-        <input type="phone number" placeholder="via Phone number">
+    <br><br><br>
+    <form align="center">
+        Contact me: <input type="email" placeholder="Type your e-mail address">
+        <input type="phone number" placeholder="Type your phone number">
+        <input type="textarea" placeholder="What do you want to say?">
         <input type="submit">
     </form>
+    <br><br>
+    <div align="center"><a href="#topofpage" align="center">↑ top of page ↑</a></div>
 </body>
 </html>
