fixed spelling mistake

--- a/emona cv.html
+++ b/emona cv.html
@@ -54,7 +54,7 @@
     <div>
         <h3>ACTIVITIES</h3>
     <ul>
-        <li>Arts and crafts, especially jewelery making</li>
+        <li>Arts and crafts, especially jewelry making</li>
         <li>Baking</li>
         <li>Hiking and cycling</li>
     </ul>
