added facebook link,+ phonenumber,gmail facebook logos

--- a/emona cv.html
+++ b/emona cv.html
@@ -12,7 +12,8 @@
     <div align="center">
         <h1>Emona Krasniqi</h1>
         <h4>
-            <address>Kalabri, Prishtine</address>+38349260061 · emonakrasniqi1@gmail.com
+            <address>Kalabri, Prishtine</address><img src="./assets/call logo.png" width="20" alt="call logo" title="call logo"> +38349260061 · <img src="./assets/gmail logo.png" width="16" alt="gmail logo" title="gmail logo"> emonakrasniqi1@gmail.com
+            <a href="https://www.facebook.com/emonakr/" target="_blank"><span><img src="./assets/facebook logo.png" alt="facebook logo" title="facebook logo" width="16"></span> Emona Krasniqi</a>
         </h4>
     </div>
     <div><figure align="center"><img src="./assets/depressed programmer girl.webp" alt="stock image of a programmer" width="240" title="stock image lol"> <figcaption>(example of a picture insertion)</figcaption></figure></div>
