added tables to structure the cv better

--- a/emona cv.html
+++ b/emona cv.html
@@ -8,66 +8,80 @@
     <title>Emona Krasniqi CV</title>
 </head>
 <body>
-    <a id="topofpage"></a>
-    <div align="center">
-        <h1>Emona Krasniqi</h1>
-        <h4>
-            <address>Kalabri, Prishtine</address><img src="./assets/call logo.png" width="20" alt="call logo" title="call logo"> +38349260061 · <img src="./assets/gmail logo.png" width="16" alt="gmail logo" title="gmail logo"> emonakrasniqi1@gmail.com
-            <a href="https://www.facebook.com/emonakr/" target="_blank"><span><img src="./assets/facebook logo.png" alt="facebook logo" title="facebook logo" width="16"></span> Emona Krasniqi</a>
-        </h4>
-    </div>
-    <div><figure align="center"><img src="./assets/depressed programmer girl.webp" alt="stock image of a programmer" width="240" title="stock image lol"> <figcaption>(example of a picture insertion)</figcaption></figure></div>
-    <br>
-    <div>
-        <h3>EXPERIENCE</h3>
-        <dl>
-            <dt><b>June 2021-present</b></dt>
-            <dd>Childcare for international families - <em>US EMBASSY</em></dd>
-        </dl>
-    </div>
-    <br>
-    <div>
-    <h3>EDUCATION</h3>
-    <dl>
-        <dt><b>September 2014-June 2017</b></dt>
-        <dd>Xhevdet Doda High School</dd>
-        <br>
-        <dt><b>October 2017-Present</b></dt>
-        <dd><em>Department of Chemistry,</em> University of Prishtina</dd>
-        <br>
-        <dt><b>May 2022-Present</b></dt>
-        <dd><a href="https://bootcamp.perprogramera.com/" target="_blank"><span><strong>Bootcamp online | PER PROGRAMERA</strong></span></a></dd>
-    </dl>
-    </div>
-    <br>
-    <div>
-        <h3>SKILLS/LANGUAGES</h3>
-    <ul>
-        <li>Profficient in Microsoft Office</li>
-        <li>Collaborative in a team setting</li>
-        <li>Detail-oriented</li>
-        <li>Organizational know-how</li>
-        <li>Albanian-native language</li>
-        <li>English-C2</li>
-    </ul>
-    </div>
-    <br>
-    <div>
-        <h3>ACTIVITIES</h3>
-    <ul>
-        <li>Arts and crafts, especially jewelry making</li>
-        <li>Baking</li>
-        <li>Hiking and cycling</li>
-    </ul>
-    </div>
-    <br><br><br>
-    <form align="center">
-        Contact me: <input type="email" placeholder="Type your e-mail address">
-        <input type="phone number" placeholder="Type your phone number">
-        <input type="textarea" placeholder="What do you want to say?">
-        <input type="submit">
-    </form>
-    <br><br>
-    <div align="center"><a href="#topofpage" align="center">↑ top of page ↑</a></div>
+    <table align="center" cellspacing="10" cellpadding="20">
+    <thead>
+      <tr>
+        <th colspan="2"> <a id="topofpage"></a>
+             <h1>Emona Krasniqi | CV</h1>
+                <h4>
+                    <address>Kalabri, Prishtine</address>
+                    <img src="./assets/call logo.png" width="20" alt="call logo" title="call logo"> +38349260061 · <img src="./assets/gmail logo.png" width="16" alt="gmail logo" title="gmail logo"> emonakrasniqi1@gmail.com
+                    <a href="https://www.facebook.com/emonakr/" target="_blank">
+                        <span>
+                            <img src="./assets/facebook logo.png" alt="facebook logo" title="facebook logo" width="16">
+                        </span> Emona Krasniqi</a>
+                </h4>
+                <figure valign="center"><img src="./assets/depressed programmer girl.webp" alt="stock image of a programmer" width="240" title="stock image lol"> <figcaption>(example of a picture insertion)</figcaption></figure>
+         </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td valign="top">
+            <h3>EDUCATION</h3>
+            <dl>
+                <dt><b>September 2014-June 2017</b></dt>
+                <dd>Xhevdet Doda High School</dd>
+                <br>
+                <dt><b>October 2017-Present</b></dt>
+                <dd><em>Department of Chemistry,</em> University of Prishtina</dd>
+                <br>
+                <dt><b>May 2022-Present</b></dt>
+                <dd><a href="https://bootcamp.perprogramera.com/" target="_blank"><span><strong>Bootcamp online | PER PROGRAMERA</strong></span></a></dd>
+            </dl>
+         </td>
+         <td valign="top">
+            <h3>SKILLS/LANGUAGES</h3>
+        <ul>
+                <li>Profficient in Microsoft Office</li>
+                <li>Collaborative in a team setting</li>
+                <li>Detail-oriented</li>
+                <li>Organizational know-how</li>
+                <li>Albanian-native language</li>
+                <li>English-C2</li>
+         </ul>
+         </td>   
+      </tr>
+      <tr>
+        <td valign="top">
+            <h3>EXPERIENCE</h3>
+            <dl>
+              <dt><b>June 2021-present</b></dt>
+               <dd>Childcare for international families - <em>US EMBASSY</em></dd>
+            </dl>
+        </td>
+        <td valign="top">
+            <h3>ACTIVITIES</h3>
+        <ul>
+            <li>Arts and crafts, especially jewelry making</li>
+            <li>Baking</li>
+            <li>Hiking and cycling</li>
+        </ul>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2" align="center">
+            <form>
+                <br><br><br>
+            Contact me: <input type="email" placeholder="Type your e-mail address" required>
+            <input type="phone number" placeholder="Type your phone number" required>
+            <input type="textarea" placeholder="What do you want to say?" minlength="10" maxlength="250" required>
+            <input type="submit" value="submit">
+        </form>
+        <br><br><br><br>
+        <div align="center"><a href="#topofpage" align="center">↑ top of page ↑</a></div></td>
+      </tr>
+    </tbody>
+    </table>
 </body>
 </html>
