changed picture, final touches

--- a/emona cv.html
+++ b/emona cv.html
@@ -8,23 +8,35 @@
     <title>Emona Krasniqi CV</title>
 </head>
 <body>
-    <table align="center" cellspacing="10" cellpadding="20">
-    <thead>
+    <a id="topofpage"></a>
+    <table align="center" cellspacing="10" cellpadding="10">
       <tr>
-        <th colspan="2"> <a id="topofpage"></a>
-             <h1>Emona Krasniqi | CV</h1>
+        <th colspan="2" align="center"> 
+            <h1>Emona Krasniqi | CV</h1>
+        </th>
+            <tr>
+            <td>
+                <figure valign="left">
+                    <img src="./assets/programmer.jpg" alt="Portrait of coding programmer vector image" width="240" title="stock image lol">
+                <figcaption>Portrait of a programmer</figcaption>
+                </figure>
+            </td>
+            <td>
                 <h4>
-                    <address>Kalabri, Prishtine</address>
-                    <img src="./assets/call logo.png" width="20" alt="call logo" title="call logo"> +38349260061 · <img src="./assets/gmail logo.png" width="16" alt="gmail logo" title="gmail logo"> emonakrasniqi1@gmail.com
-                    <a href="https://www.facebook.com/emonakr/" target="_blank">
+                    <dl>
+                    <dt><address>Kalabri, Prishtine</address></dt>
+                <br>
+                    <dt><img src="./assets/call logo.png" width="20" alt="call logo" title="call logo">     +38349260061</dt>
+                <br>
+                    <dt><img src="./assets/gmail logo.png" width="16" alt="gmail logo" title="gmail logo"> emonakrasniqi1@gmail.com</dt>
+                <br>
+                    <dt><a href="https://www.facebook.com/emonakr/" target="_blank">
                         <span>
                             <img src="./assets/facebook logo.png" alt="facebook logo" title="facebook logo" width="16">
-                        </span> Emona Krasniqi</a>
-                </h4>
-                <figure valign="center"><img src="./assets/depressed programmer girl.webp" alt="stock image of a programmer" width="240" title="stock image lol"> <figcaption>(example of a picture insertion)</figcaption></figure>
-         </th>
-      </tr>
-    </thead>
+                        </span> Emona Krasniqi</a></dt>
+                    </dl>
+               </h4>
+              </td></tr>
     <tbody>
       <tr>
         <td valign="top">
